// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button [common] example testing should match snapshot(s) for all-types 1`] = `
<button
  className="lucid-Button lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    small
     
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 2`] = `
<button
  className="lucid-Button lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
    small
     
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 3`] = `
<button
  className="lucid-Button lucid-Button-small lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 4`] = `
<button
  className="lucid-Button lucid-Button-primary lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    small
     
    primary
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 5`] = `
<button
  className="lucid-Button lucid-Button-primary lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
    small
     
    primary
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 6`] = `
<button
  className="lucid-Button lucid-Button-primary lucid-Button-small lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 7`] = `
<button
  className="lucid-Button lucid-Button-link lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    small
     
    link
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 8`] = `
<button
  className="lucid-Button lucid-Button-link lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
    small
     
    link
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 9`] = `
<button
  className="lucid-Button lucid-Button-link lucid-Button-small lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 10`] = `
<button
  className="lucid-Button lucid-Button-danger lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    small
     
    danger
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 11`] = `
<button
  className="lucid-Button lucid-Button-danger lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
    small
     
    danger
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 12`] = `
<button
  className="lucid-Button lucid-Button-danger lucid-Button-small lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 13`] = `
<button
  className="lucid-Button lucid-Button-invisible lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    small
     
    invisible
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 14`] = `
<button
  className="lucid-Button lucid-Button-invisible lucid-Button-small"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
    small
     
    invisible
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 15`] = `
<button
  className="lucid-Button lucid-Button-invisible lucid-Button-small lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 1,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 16`] = `
<button
  className="lucid-Button lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    short
     
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 17`] = `
<button
  className="lucid-Button lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
    short
     
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 18`] = `
<button
  className="lucid-Button lucid-Button-short lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 19`] = `
<button
  className="lucid-Button lucid-Button-primary lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    short
     
    primary
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 20`] = `
<button
  className="lucid-Button lucid-Button-primary lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
    short
     
    primary
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 21`] = `
<button
  className="lucid-Button lucid-Button-primary lucid-Button-short lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 22`] = `
<button
  className="lucid-Button lucid-Button-link lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    short
     
    link
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 23`] = `
<button
  className="lucid-Button lucid-Button-link lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
    short
     
    link
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 24`] = `
<button
  className="lucid-Button lucid-Button-link lucid-Button-short lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 25`] = `
<button
  className="lucid-Button lucid-Button-danger lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    short
     
    danger
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 26`] = `
<button
  className="lucid-Button lucid-Button-danger lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
    short
     
    danger
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 27`] = `
<button
  className="lucid-Button lucid-Button-danger lucid-Button-short lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 28`] = `
<button
  className="lucid-Button lucid-Button-invisible lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    short
     
    invisible
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 29`] = `
<button
  className="lucid-Button lucid-Button-invisible lucid-Button-short"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
    short
     
    invisible
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 30`] = `
<button
  className="lucid-Button lucid-Button-invisible lucid-Button-short lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 2,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 31`] = `
<button
  className="lucid-Button lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    large
     
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 32`] = `
<button
  className="lucid-Button lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
    large
     
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 33`] = `
<button
  className="lucid-Button lucid-Button-large lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 34`] = `
<button
  className="lucid-Button lucid-Button-primary lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    large
     
    primary
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 35`] = `
<button
  className="lucid-Button lucid-Button-primary lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
    large
     
    primary
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 36`] = `
<button
  className="lucid-Button lucid-Button-primary lucid-Button-large lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 37`] = `
<button
  className="lucid-Button lucid-Button-link lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    large
     
    link
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 38`] = `
<button
  className="lucid-Button lucid-Button-link lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
    large
     
    link
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 39`] = `
<button
  className="lucid-Button lucid-Button-link lucid-Button-large lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 40`] = `
<button
  className="lucid-Button lucid-Button-danger lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    large
     
    danger
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 41`] = `
<button
  className="lucid-Button lucid-Button-danger lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
    large
     
    danger
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 42`] = `
<button
  className="lucid-Button lucid-Button-danger lucid-Button-large lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 43`] = `
<button
  className="lucid-Button lucid-Button-invisible lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    large
     
    invisible
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 44`] = `
<button
  className="lucid-Button lucid-Button-invisible lucid-Button-large"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
    large
     
    invisible
  </span>
</button>
`;

exports[`Button [common] example testing should match snapshot(s) for all-types 45`] = `
<button
  className="lucid-Button lucid-Button-invisible lucid-Button-large lucid-Button-has-only-icon"
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "gridColumn": 3,
    }
  }
  type="button"
>
  <span
    className="lucid-Button-content"
  >
    <CheckIcon />
  </span>
</button>
`;
